--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,9 @@ authors = ["Pedro Maciel Xavier <pedroxavier@psr-inc.com>"]
 version = "0.1.0"
 
 [deps]
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
+Interact = "c601a237-2ae4-5e1e-952c-7a85b0c7eef1"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+WebIO = "0f1e0344-ec1d-5b48-a673-e5cf874b6c29"
