--- a/notebooks/Project.toml
+++ b/notebooks/Project.toml
@@ -1,2 +1,6 @@
 [deps]
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
+Interact = "c601a237-2ae4-5e1e-952c-7a85b0c7eef1"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 QCTutorial = "f357cca8-9b45-46c3-8b40-78f6809823ec"
